# yet-another-demo

./: .copier-answers.yml  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  prek.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml  template-update.yml
docs/: about_the_docs.md  conf.py  configuration.md  development_workflow.md  getting_started.md  index.md
docs/_static/: .gitkeep
src/yet_another_demo/: __init__.py  __main__.py
tests/: test_cli.py
